[tool.poetry]
name = "sqlalchemy-querytools"
version = "0.1.2"
description = "Helpers for searching, sorting and pagination for SQLAlchemy SELECT queries"
authors = ["Vadim Andronik <andronnikovvv@gmail.com>"]
repository = "https://github.com/ronik-v/sqlalchemy-querytools"
license = "MIT"
readme = "README.md"
packages = [{ include = "sqlalchemy_querytools", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
SQLAlchemy = ">=1.4,<2.2"
typing-extensions = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
psycopg2-binary = "^2.9"
mypy = "^1.11"
black = "^24.0"
ruff = "^0.5"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
